--- a/source/style/template.tex
+++ b/source/style/template.tex
@@ -33,10 +33,10 @@
 \usepackage{titling}
 \setlength{\droptitle}{-90pt} % The negative number moves the title closer to the top of the page
 \title{$title$} % name $if(title)$$title$$endif$
+\date{$if(date)$$date$\\$endif$} % Leave blank to remove the date
 \author{$if(website)$$website$\\\\$endif$
 $street$ \textbar{} $city$, $postcode$\\ %Put your address here
 $phone$ \textbar{} $email$ } % put your contact information here
-\date{} % Leave blank to remove the date
 
 % BEGIN DOCUMENT
 \begin{document}
