disable custom font

--- a/source/style/template.tex
+++ b/source/style/template.tex
@@ -22,17 +22,17 @@
 \usepackage{xunicode}
 \usepackage{xltxtra}
 \defaultfontfeatures{Mapping=tex-text} % converts LaTeX specials (quotes'' --- dashes etc.) to unicode
-\setromanfont[Ligatures={Common}, Numbers={OldStyle}]{Hoefler Text}
-\setmonofont[Scale=0.8]{Monaco} 
-\setsansfont[Scale=0.9]{Optima Regular} 
+\setromanfont[Ligatures={Common}, Numbers={OldStyle}]{Palatino}
+\setmonofont[Scale=1.0]{Monaco} 
+\setsansfont[Scale=1.0]{Optima Regular} 
 
 % HEADINGS and TITLES
-\usepackage{sectsty} 
-\usepackage[normalem]{ulem} 
+\usepackage{sectsty}
+\usepackage[normalem]{ulem}
 \sectionfont{\sffamily\mdseries\large\underline} % Underlines headings
 \setcounter{secnumdepth}{-1} % Removes the numbers before sections
-\subsectionfont{\rmfamily\mdseries\scshape\normalsize} 
-\subsubsectionfont{\rmfamily\bfseries\upshape\normalsize} 
+\subsectionfont{\rmfamily\mdseries\scshape\normalsize}
+\subsubsectionfont{\rmfamily\bfseries\upshape\normalsize}
 
 \usepackage{titling}
 \setlength{\droptitle}{-90pt} % The negative number moves the title closer to the top of the page
