remove all custom fonts

--- a/source/style/template.tex
+++ b/source/style/template.tex
@@ -22,9 +22,9 @@
 \usepackage{xunicode}
 \usepackage{xltxtra}
 \defaultfontfeatures{Mapping=tex-text} % converts LaTeX specials (quotes'' --- dashes etc.) to unicode
-\setromanfont[Ligatures={Common}, Numbers={OldStyle}]{Palatino}
-\setmonofont[Scale=1.0]{Monaco} 
-\setsansfont[Scale=1.0]{Optima Regular} 
+% \setromanfont[Ligatures={Common}, Numbers={OldStyle}]{Palatino}
+% \setmonofont[Scale=1.0]{Monaco} 
+% \setsansfont[Scale=1.0]{Optima Regular} 
 
 % HEADINGS and TITLES
 \usepackage{sectsty}
