needet to usepackage hyperref to get mds #'s to work with pdf

--- a/source/style/template.tex
+++ b/source/style/template.tex
@@ -18,6 +18,9 @@
 \setenumerate{nolistsep}
 \setitemize{nolistsep}
 
+% COLOR
+\usepackage{hyperref}
+
 % FONTS
 \usepackage{xunicode}
 \usepackage{xltxtra}
