#10 replaces depricated docker base with non alpine image xltxtra have now been incorporated into the fontspec https://ctan.org/pkg/xltxtra

--- a/source/style/template.tex
+++ b/source/style/template.tex
@@ -23,7 +23,7 @@
 
 % FONTS
 \usepackage{xunicode}
-\usepackage{xltxtra}
+\usepackage{fontspec}
 \defaultfontfeatures{Mapping=tex-text} % converts LaTeX specials (quotes'' --- dashes etc.) to unicode
 % \setromanfont[Ligatures={Common}, Numbers={OldStyle}]{Palatino}
 % \setmonofont[Scale=1.0]{Monaco} 
